2007-07-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Re-add pthread check in libport's macro.
	* urbi-libport.m4: Here.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Upgrade libport support
	* config-headers-prefixed.mk: Go into the top-level builddir to
	run config.status.
	* urbi-libport.m4: Request libport/config.h.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	libport/Makefile.am
	* urbi-libport.m4 (URBI_LIBPORT): Adjust to it.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Improvements
	* ax_boost_thread.m4: Better coding style.
	* urbi-libport.m4: Fix macro invocation.
	* bison++.in: Better message.

2007-07-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Improve boost detection in urbi-libport macro.

        Use the macro from the Autoconf macro archive to detect Boost.
        Pthread is no more necessary, but Boost.Thread is required.

	* urbi-libport.m4: Use ax_boost instead of tc-boost.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Lazyness in bison++
	* bison++.in: When updating the file, if there are differences
	on synclines, keep the old time stamp.
	Should be further improved.

2007-07-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add empty initialization of LDFLAGS.
	* init.mk: Here.

2007-07-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Add boost related macros.

        From the Autoconf Macro Archive
        http://autoconf-archive.cryp.to/

	* build-aux/ax_boost.m4: New.
	* build-aux/ax_boost_base.m4: New.
	* build-aux/ax_boost_date_time.m4: New.
	* build-aux/ax_boost_filesystem.m4: New.
	* build-aux/ax_boost_iostreams.m4: New.
	* build-aux/ax_boost_program_options.m4: New.
	* build-aux/ax_boost_python.m4: New.
	* build-aux/ax_boost_regex.m4: New.
	* build-aux/ax_boost_serialization.m4: New.
	* build-aux/ax_boost_signals.m4: New.
	* build-aux/ax_boost_test_exec_monitor.m4: New.
	* build-aux/ax_boost_thread.m4: New.
	* build-aux/ax_boost_unit_test_framework.m4: New.